--- a/.gitconfig
+++ b/.gitconfig
@@ -27,3 +27,4 @@
 	unignore = !git update-index --no-assume-unchanged
 	ignored = !git ls-files -v | grep ^[a-z]
 	safe-merge = merge --no-commit --no-ff
+	ftp-push = "!git fetch origin; git pull origin master; git-ftp push"
